# fix-math

./: .gitignore  Cargo.toml  approx.c  build.bat  fix_fs.h  noise.c  render.sh  test_fix_fs.c
csrc/: adm_types.h
src/: big_float.rs  bin.rs  bisect.rs  decimal.rs  euclids_alg.rs  lib.rs  number.rs  poly.rs  range.rs  reference.rs
