[package]
name = "fix-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
num-integer = "0.1.46"
num-bigint = "0.4.4"
num-rational = "0.4.1"

[lib]
name = "fixlab"
path = "src/lib.rs"

[[bin]]
name = "fixlab_demos"
path = "src/bin.rs"
